--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
         <div id="done">
           <h2>DONE <i class="fa-solid fa-clipboard-check"></i></h2>
-          <li v-for="task in listOfDone" >{{task}} <i class="fa-solid fa-check"></i>
+          <li class="li-done" v-for="task in listOfDone" >{{task}} <i class="fa-solid fa-check"></i>
 
           </li>
         </div>
